# wiomw-sui

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
setup/: index.html
setup/css/: styles.css
src/: Makefile.am  Makefile.in  advanced.c  b2h.c  b2h.h  check.c  check.h  dns.c  dns.h  index.c  lan_ip.c  lan_ip.h  login_check.c  login_check.h  mac.c  mac.h  main_cgi.c  password.c  password.h  range_check.c  range_check.h  reboot.c  reboot.h  string_helpers.c  string_helpers.h  syslog_syserror.h  update.c  update.h  urandom.c  urandom.h  version.c  version.h  wan_ip.c  wan_ip.h  wifi.c  wifi.h  wifi_api.c  wifi_cgi.c  wifi_uci.c  wifi_uci.h  (+9 more)
test/: Makefile.am  Makefile.in
test/integration.tests/: xsrfc_behavior.exp
test/src/: Makefile.am  Makefile.in  xsrfc_behavior.c
www-static/: Makefile.am  Makefile.in  index.html
www-static/api_guide/: api_example_calls.txt  cgi-bin_api_guide.txt
www-static/css/: Makefile.am  Makefile.in  styles.css
www-static/js/: Makefile.am  Makefile.in  luci-app-wiomw-functions.js
